# scythe-database

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json
docs/: PRD.md  TECHNICAL_DESIGN.md
scripts/: generate-icons.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  deps.rs  error.rs  export.rs  indexer.rs  lib.rs  main.rs  previews.rs  scanner.rs  settings.rs  state.rs
src/components/: AssetGrid.tsx  AssetTile.tsx  DetailPanel.tsx  EmptyState.tsx  Header.tsx  ModelPreview.tsx  ScanStatus.tsx  Sidebar.tsx
src/services/: modelThumbnailCache.ts  thumbnailCache.ts
src/state/: store.ts
src/types/: index.ts
