[package]
name = "scythe-database"
version = "1.0.0"
description = "A Unity asset database application"
authors = ["Scythe"]
edition = "2021"

[lib]
name = "scythe_database_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
regex = "1"
image = { version = "0.25", features = ["png", "jpeg", "tga", "bmp", "gif"] }
psd = "0.3"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
